<resources>
    <string name="textView_tieu_de">Infomation Form</string>
    <string name="hint_ho_ten">Input FullName</string>
    <string name="hint_email">Input Email</string>
    <string name="hint_so_dien_thoai">Input Phone Number</string>
    <string name="name_button_xac_nhan">Confirm</string>
    <string name="app_name">App Multiple Language App Sample</string>
    <string name="text_chao_ban">Hello</string>
    <string name="text_email" translatable="false">Email</string>
    <string name="text_so_dien_thoai">Phone Number</string>
</resources>